# chavfana-backend

./: .env.example  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
alembic/: env.py
alembic/versions/: 3da86a867079_added_plot_id_to_the_project_creation.py  a23295637421_made_foreign_keys_nullable.py  e92e8964dcf4_created_tables.py
app/: main.py
app/api/: routes.py
app/api/endpoints/: animals.py  auth.py  farms.py  projects.py  statistics.py
chavfana/controllers/: animals.py  auth.py  farms.py  projects.py  statistics.py
chavfana/core/: config.py  exceptions.py  logging.py
chavfana/db/: database.py
chavfana/dependencies/: auth.py
chavfana/models/: __init__.py  animal.py  attachments_audit.py  base.py  contacts_equipment.py  daily_tasks.py  farm.py  finance.py  plot.py  project.py  soil_weather.py  species.py  user.py  veterinary.py
chavfana/schemas/: __init__.py  animal.py  farm.py  finance.py  project.py  soil_weather.py  user.py
static/: docs.html
